add ClassService and Class controller
